k8s/manifests-ae405a/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-ae405a
  namespace: journee
  labels:
    app: journee-ae405a
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-ae405a
  template:
    metadata:
      labels:
        app: journee-ae405a
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-ae405a
          image: gcr.io/my-docker-471807/journee:ae405a-e72821
          ports:
            - containerPort: 3000
