k8s/manifests-ae405a/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-ae405a
  namespace: journee
spec:
  selector:
    app: journee-ae405a
  ports:
    - port: 80
      targetPort: 3000
